# colory

./: Cargo.toml  README.md
.github/: ci.yaml
.github/workflows/: ci.yaml
examples/: background.rs  foreground.rs  foreground_with_background.rs  reset.rs
examples/styles/: bold.rs  italic.rs  main.rs  underline.rs
src/: background.rs  foreground.rs  lib.rs  styles.rs
